--- a/distribuidora-front/src/app/components/barra-pesquisa/barra-pesquisa.component.css
+++ b/distribuidora-front/src/app/components/barra-pesquisa/barra-pesquisa.component.css
@@ -4,3 +4,13 @@
   align-items: center;
   flex-direction: column;
 }
+
+mat-form-field {
+  width: 70vw;
+}
+
+@media screen and (max-width: 980px) {
+  mat-form-field {
+    width: 80vw;
+  }
+}
