--- a/distribuidora-front/src/app/components/items-list/items-list.component.css
+++ b/distribuidora-front/src/app/components/items-list/items-list.component.css
@@ -33,7 +33,7 @@
 }
 .about {
   height: 100%;
-  width: 24%;
+  width: 40%;
 }
 .title {
   padding-top: 10px;
@@ -139,7 +139,7 @@ hr {
   line-height: 10px;
 }
 .total-amount {
-  font-size: 30px;
+  font-size: 36px;
   font-family: "Open Sans";
   font-weight: 900;
   color: #202020;
@@ -149,140 +149,46 @@ hr {
   margin-top: 10px;
 }
 
-h2,
-h3 {
+h1 {
   text-align: center;
-}
-
-h3:hover {
-  cursor: pointer;
 }
 
 img {
   height: 120px;
 }
 
-@media screen and (max-width: 1020px) {
-  .title {
-    padding-top: 10px;
-    line-height: 10px;
-    font-size: 18px;
-    font-family: "Open Sans";
-    font-weight: 800;
-    color: #202020;
+@media screen and (max-width: 1100px) {
+
+  .checkout {
+    float: right;
+    margin-right: 5%;
+    width: 60%;
   }
 
-  .total-amount {
-    font-size: 18px;
-    font-family: "Open Sans";
-    font-weight: 900;
-    color: #202020;
-  }
-
-  .Subtotal {
-    font-size: 18px;
-    font-family: "Open Sans";
-    font-weight: 700;
-    color: #202020;
-  }
-
-  .amount {
-    padding-top: 20px;
-    font-size: 18px;
-    font-family: "Open Sans";
-    font-weight: 800;
-    color: #202020;
-  }
-
-  .btn {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background-color: #d9d9d9;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    font-family: "Open Sans";
-    font-weight: 900;
-    color: #202020;
-    cursor: pointer;
-  }
-
-  @media screen and (max-width: 650px) {
-    .title {
-      padding-top: 10px;
-      line-height: 10px;
-      font-size: 16px;
-      font-family: "Open Sans";
-      font-weight: 800;
-      color: #202020;
-      word-wrap: break-word;
-    }
-
-    .about {
-      height: 100%;
-      width: 50%;
-    }
-
-    .btn {
-      width: 20px;
-      height: 20px;
-      border-radius: 50%;
-      background-color: #d9d9d9;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 20px;
-      font-family: "Open Sans";
-      font-weight: 900;
-      color: #202020;
-      cursor: pointer;
-    }
-
-    .Cart-Items {
-      margin: auto;
-      width: 95%;
-      height: 30%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-  }
-
-  @media screen and (max-width: 420px) {
-    img {
-      height: 100px;
-    }
-
-    .Cart-Items {
-      margin: auto;
-      width: 90%;
-      height: 20%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .about {
-      height: 100%;
-      width: 15%;
-    }
-
-    .title {
-      padding-top: 10px;
-      line-height: 10px;
-      font-size: 14px;
-      font-family: "Open Sans";
-      font-weight: 800;
-      color: #202020;
-      word-wrap: initial;
-    }
-
-    .checkout {
-      float: right;
-      margin-right: 5%;
-      width: 50%;
-    }
+  .about {
+    height: 100%;
+    width: 50%;
   }
 }
+
+@media screen and (max-width: 600px) {
+
+  .title, .Subtotal, .amount {
+    font-size: 18px;
+  }
+
+  img {
+    height: 100px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+
+  .checkout {
+    float: right;
+    margin-right: 5%;
+    width: 80%;
+  }
+
+}
+
