--- a/distribuidora-front/src/app/components/order/my-orders/my-orders.component.css
+++ b/distribuidora-front/src/app/components/order/my-orders/my-orders.component.css
@@ -25,3 +25,26 @@ a:hover {
 h2 {
   text-align: center;
 }
+
+.identifier {
+  color: #696969;
+  font-size: 16px;
+}
+
+@media screen and (max-width: 600px) {
+  .orders {
+    margin: auto;
+    width: 70%;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .orders {
+    margin: auto;
+    width: 95%;
+  }
+
+  .identifier {
+    font-size: 14px;
+  }
+}
