--- a/distribuidora-front/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/distribuidora-front/src/app/components/shopping-cart/shopping-cart.component.html
@@ -6,17 +6,14 @@
 
   <div class="Cart-Items" *ngFor="let item of itemsOfCart">
     <div class="image-box">
-      <img
-        [src]="item.imageUrl"
-        style="height: 120px"
-      />
+      <img [src]="item.imageUrl" />
     </div>
     <div class="about">
       <h4 class="title">{{ item.name }}</h4>
     </div>
     <div class="counter">
       <div class="btn" (click)="dec(item)">-</div>
-      <div class="count"> {{ item.amount }} </div>
+      <div class="count">{{ item.amount }}</div>
       <div class="btn" (click)="inc(item)">+</div>
     </div>
     <div class="prices">
@@ -29,15 +26,22 @@
     <div class="total">
       <div>
         <div class="Subtotal">Total</div>
-        <div class="items"> {{ quantidadeItems }} itens</div>
+        <div class="items">{{ quantidadeItems }} itens</div>
       </div>
-      <div class="total-amount"> {{ valorTotal | currency }} </div>
+      <div class="total-amount">{{ valorTotal | currency }}</div>
     </div>
-    <button mat-stroked-button class="button" color="primary" (click)="prosseguirParaCriarPedido()">Checkout</button>
+    <button
+      mat-stroked-button
+      class="button"
+      color="primary"
+      (click)="prosseguirParaCriarPedido()"
+    >
+      Checkout
+    </button>
   </div>
 </div>
 
 <ng-template #carrinhoVazio>
   <h2>Você não tem nada em seu carrinho de compras...</h2>
-  <h3 class="remove" (click)="comecarComprar()" ><u>Começar a comprar</u></h3>
+  <h3 class="remove" (click)="comecarComprar()"><u>Começar a comprar</u></h3>
 </ng-template>
